--- a/app/css/style.css
+++ b/app/css/style.css
@@ -31,6 +31,12 @@ p {
     color: #C2C2C2;
 }
 
+.button_count{
+    background: #2B2F40;
+    color: #C2C2C2;
+    margin-left: 10px;
+}
+
 .link:hover {
     background: #C2C2C2;
     color: #2B2F40;
